Colaboratory を使用して作成しました

--- a/【問題】Iris_keras_2022.ipynb
+++ b/【問題】Iris_keras_2022.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sherbw28/class_deep/blob/main/%E3%80%90%E5%95%8F%E9%A1%8C%E3%80%91Iris_keras_2022.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "vscDW81ftTj5"
+      },
       "source": [
         "# 穴埋め演習テスト問題\n",
         "\n",
@@ -41,81 +28,78 @@
         "のデータをもとにそれぞれがどの種類に該当するのかを分類・予測する学習モデルを作り、評価しています。\n",
         "\n",
         "****のような連続アスタリスクでソースコードが隠されている部分を正常な命令文で置き換えて、すべてを正常に実行させて結果を表示させてください。 "
-      ],
-      "metadata": {
-        "id": "vscDW81ftTj5"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## あやめデータをニューラルネットワークで分類する"
-      ],
       "metadata": {
         "id": "2PA_-8bzQ6_M"
-      }
+      },
+      "source": [
+        "## あやめデータをニューラルネットワークで分類する"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "GFOhvcZnVti2"
+      },
       "source": [
         "### ライブラリのimport\n",
         "tensorflowをtfとしてimportする \n",
         "numpyをnpとしてimportする\n",
         "matplotlib.pyplotをpltとしてimportする"
-      ],
-      "metadata": {
-        "id": "GFOhvcZnVti2"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {
+        "id": "6AyhAaWQVsCC"
+      },
+      "outputs": [],
       "source": [
         "import tensorflow as tf\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
-      ],
-      "metadata": {
-        "id": "6AyhAaWQVsCC"
-      },
-      "execution_count": 19,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "fW7nFnq-W-mL"
+      },
       "source": [
         "sklearnからdatasetsをimportする\n",
         "sklearnからmodel_selectionをimportする"
-      ],
-      "metadata": {
-        "id": "fW7nFnq-W-mL"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from sklearn import datasets\n",
-        "from sklearn import model_selection"
-      ],
+      "execution_count": 20,
       "metadata": {
         "id": "uQmO5z4dXH_A"
       },
-      "execution_count": 20,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from sklearn import datasets\n",
+        "from sklearn import model_selection"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 21,
       "metadata": {
-        "id": "Bw2PEedzuN_2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "Bw2PEedzuN_2",
         "outputId": "be35646d-9ac4-4799-fccd-4ec51ebc548b"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{'data': array([[5.1, 3.5, 1.4, 0.2],\n",
             "       [4.9, 3. , 1.4, 0.2],\n",
@@ -298,21 +282,16 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### pandasという文字整形ライブラリでデータを見やすく表示"
-      ],
       "metadata": {
         "id": "y5-D979QXrxv"
-      }
+      },
+      "source": [
+        "### pandasという文字整形ライブラリでデータを見やすく表示"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
-        "df = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
-        "df['species'] = iris.target_names[iris.target]\n",
-        "print(df.head())"
-      ],
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -320,11 +299,10 @@
         "id": "VnNSZ1H9O6EE",
         "outputId": "d4b7d330-509f-46a2-da39-04e595b6ebba"
       },
-      "execution_count": 22,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
             "0                5.1               3.5                1.4               0.2   \n",
@@ -341,44 +319,55 @@
             "4  setosa  \n"
           ]
         }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "df = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
+        "df['species'] = iris.target_names[iris.target]\n",
+        "print(df.head())"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "f0zPq5RFRF34"
+      },
       "source": [
         "### あやめデータをランダム(random_state=0)に並べ替えて、最初の20％をテスト用として(test_size)、残りを訓練用として分離する。\n",
         "X_train:学習用データ\n",
         "X_test:学習用の正解ラベルデータ\n",
         "y_train:評価用データ\n",
         "y_test:評価用ラベルデータ"
-      ],
-      "metadata": {
-        "id": "f0zPq5RFRF34"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "X_train, X_test, y_train, y_test = model_selection.train_test_split(\n",
-        "    iris.data, iris.target, test_size=0.2, random_state=0)"
-      ],
+      "execution_count": 23,
       "metadata": {
         "id": "-n8NIl2_NqwO"
       },
-      "execution_count": 23,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "X_train, X_test, y_train, y_test = model_selection.train_test_split(\n",
+        "    iris.data, iris.target, test_size=0.2, random_state=0)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "学習を実行"
-      ],
       "metadata": {
         "id": "tUwB5jBqYd6x"
-      }
+      },
+      "source": [
+        "学習を実行"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {
+        "id": "4WycR-uFuSok"
+      },
+      "outputs": [],
       "source": [
         "# kerasの学習モデルに層を設定\n",
         "model = tf.keras.Sequential() # Sequential学習モデル\n",
@@ -386,15 +375,15 @@
         "model.add(tf.keras.layers.Dense(4, activation='relu'))\n",
         "# 層を追加、出力3、活性化関数を「softmax」関数に指定\n",
         "model.add(tf.keras.layers.Dense(3, activation='softmax'))"
-      ],
-      "metadata": {
-        "id": "4WycR-uFuSok"
-      },
-      "execution_count": 24,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {
+        "id": "0HUc2cGMuat8"
+      },
+      "outputs": [],
       "source": [
         "# 学習モデルをコンパイル、引数で以下を指定\n",
         "# オプティマイザー=adam (損失をみて学習パラメータを更新する方法) \n",
@@ -404,19 +393,11 @@
         "              loss='sparse_categorical_crossentropy',\n",
         "              metrics=['accuracy'])\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "0HUc2cGMuat8"
-      },
-      "execution_count": 25,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 学習を実行、第一引数は学習データ、第二引数は正解、エポック数を500に指定\n",
-        "model.fit(X_train, y_train, epochs=500)"
-      ],
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -424,11 +405,10 @@
         "id": "QzHApOqBudRM",
         "outputId": "d926b7ae-d2b2-4012-fab3-47ef57372f98"
       },
-      "execution_count": 26,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1/500\n",
             "4/4 [==============================] - 1s 4ms/step - loss: 1.7537 - accuracy: 0.3667\n",
@@ -1433,28 +1413,53 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<keras.callbacks.History at 0x7fa50d797250>"
             ]
           },
+          "execution_count": 26,
           "metadata": {},
-          "execution_count": 26
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# 学習を実行、第一引数は学習データ、第二引数は正解、エポック数を500に指定\n",
+        "model.fit(X_train, y_train, epochs=500)\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "学習済みのモデルを評価する"
-      ],
       "metadata": {
         "id": "wufD-05lYq5S"
-      }
+      },
+      "source": [
+        "学習済みのモデルを評価する"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 36,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jZh863CTugiA",
+        "outputId": "679b68eb-a89d-44a4-bc9a-793a52928768"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1/1 [==============================] - 0s 44ms/step\n",
+            "正解\n",
+            " [2 1 0 2 0 2 0 1 1 1 2 1 1 1 1 0 1 1 0 0 2 1 0 0 2 0 0 1 1 0]\n",
+            "予想\n",
+            " [2 1 0 2 0 2 0 1 2 1 2 1 1 1 1 0 1 1 0 0 2 1 0 0 2 0 0 1 1 0]\n"
+          ]
+        }
+      ],
       "source": [
         "# 予測・推測させて結果を取得する\n",
         "pred = model.predict(X_test)\n",
@@ -1465,36 +1470,11 @@
         "print(\"正解\\n\",y_test)\n",
         "# 予測を表示\n",
         "print(\"予想\\n\",pred)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jZh863CTugiA",
-        "outputId": "679b68eb-a89d-44a4-bc9a-793a52928768"
-      },
-      "execution_count": 36,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1/1 [==============================] - 0s 44ms/step\n",
-            "正解\n",
-            " [2 1 0 2 0 2 0 1 1 1 2 1 1 1 1 0 1 1 0 0 2 1 0 0 2 0 0 1 1 0]\n",
-            "予想\n",
-            " [2 1 0 2 0 2 0 1 2 1 2 1 1 1 1 0 1 1 0 0 2 1 0 0 2 0 0 1 1 0]\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 比較演算子結果のTrueは足し算に使うと1,　Falseは0になる\n",
-        "# 各列ごとに比較した合計を問題数で割って正解率を表示\n",
-        "(pred == y_test).sum()/ len(pred)"
-      ],
+      "execution_count": 37,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1502,28 +1482,48 @@
         "id": "GKwZ75q5uqkL",
         "outputId": "c7ff7847-bb7c-4cea-cb06-2196af19f2ab"
       },
-      "execution_count": 37,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "0.9666666666666667"
             ]
           },
+          "execution_count": 37,
           "metadata": {},
-          "execution_count": 37
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# 比較演算子結果のTrueは足し算に使うと1,　Falseは0になる\n",
+        "# 各列ごとに比較した合計を問題数で割って正解率を表示\n",
+        "(pred == y_test).sum()/ len(pred)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "Tk_qY85n_gyf"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
