--- a/CNN_+_Plots_zeropadding2022.ipynb
+++ b/CNN_+_Plots_zeropadding2022.ipynb
@@ -106,7 +106,7 @@
         }
       ],
       "source": [
-        "SVG(model_to_dot(model, show_shapes=True, dpi=None).create(prog='dot', format='svg'))"
+        "SVG(model_to_dot(model, show_shapes=True, dpi=None).create(prog='dot', format='svg'))\n"
       ]
     },
     {
