--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNcjCmUWU+Y4uQz7mzm53QY",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sherbw28/class_deep/blob/main/CNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -41,40 +25,56 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from IPython.display import SVG\n",
-        "from keras.utils.vis_utils import model_to_dot"
-      ],
+      "execution_count": 3,
       "metadata": {
         "id": "zGUoHs0_JMux"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from IPython.display import SVG\n",
+        "from keras.utils.vis_utils import model_to_dot"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "wlbOlf6uJxQq"
+      },
+      "outputs": [],
       "source": [
         "model = Sequential()\n",
         "model.add(Conv2D( filters=3,\n",
         "                 kernel_size=(3,3),\n",
         "                 input_shape=(6,6,1),\n",
         "                 name='Conv2D_1'\n",
-        "                 ))"
-      ],
-      "metadata": {
-        "id": "wlbOlf6uJxQq"
-      },
-      "execution_count": 4,
-      "outputs": []
+        "                 ))\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "VAQwTEXrML53"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyNcjCmUWU+Y4uQz7mzm53QY",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
