Colaboratory を使用して作成しました

--- a/CNN+Train_example2022.ipynb
+++ b/CNN+Train_example2022.ipynb
@@ -11,24 +11,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "UPizBXaqsZte"
-      },
-      "source": [
-        "# CNN（畳み込みを含むニューラルネットワークでモデルに学習させる（＝訓練）"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "31Rz375ys6TX"
-      },
-      "source": [
-        "## 学習モデルのライブラリをimport"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -41,15 +23,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "kSUljlMQ556m"
-      },
-      "source": [
-        "## keras自身もimport"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
@@ -58,15 +31,6 @@
       "outputs": [],
       "source": [
         "import keras"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "coDb71EasYbL"
-      },
-      "source": [
-        "## SVG画像表示用のライブラリをimport"
       ]
     },
     {
@@ -82,15 +46,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Te0ek8P33KoG"
-      },
-      "source": [
-        "## その他のライブラリをimport"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
@@ -102,15 +57,6 @@
         "import numpy as np # importして、npという別名を設定\n",
         "# 早期終了（Early Stopping）のためのライブラリをimport\n",
         "import keras.callbacks as callbacks # callbacksという別名を設定"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7jAyC2tE41Mu"
-      },
-      "source": [
-        "## Numpyで乱数を作り、ダミーデータとして学習用、検証用にする"
       ]
     },
     {
@@ -143,15 +89,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "yDGoIoChuIiK"
-      },
-      "source": [
-        "## 学習モデルを生成する"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 7,
       "metadata": {
@@ -160,24 +97,6 @@
       "outputs": [],
       "source": [
         "model = Sequential()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Cmf_-WVg-FWn"
-      },
-      "source": [
-        "## 学習モデルにニューロン層を追加してニューラルネットワークにする"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Ha9lgMU097Az"
-      },
-      "source": [
-        "### 畳み込み層を追加"
       ]
     },
     {
@@ -224,15 +143,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "G9PFBck2v6Xl"
-      },
-      "source": [
-        "## 学習モデルの形をSVG画像で確認"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 10,
       "metadata": {
@@ -257,7 +167,7 @@
         }
       ],
       "source": [
-        "SVG(model_to_dot(model, show_shapes=True, dpi=None).create(prog='dot', format='svg'))"
+        "SVG(model_to_dot(model, show_shapes=True, dpi=None).create(prog='dot', format='svg'))\n"
       ]
     },
     {
