--- a/CNN+Plots_multisigm2022.ipynb
+++ b/CNN+Plots_multisigm2022.ipynb
@@ -175,7 +175,7 @@
         }
       ],
       "source": [
-        "SVG(model_to_dot(model, show_shapes=True, dpi=None).create(prog='dot', format='svg'))"
+        "SVG(model_to_dot(model, show_shapes=True, dpi=None).create(prog='dot', format='svg'))\n"
       ]
     },
     {
