Colaboratory を使用して作成しました

--- a/収集した画像で学習と分類.ipynb
+++ b/収集した画像で学習と分類.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sherbw28/class_deep/blob/main/%E5%8F%8E%E9%9B%86%E3%81%97%E3%81%9F%E7%94%BB%E5%83%8F%E3%81%A7%E5%AD%A6%E7%BF%92%E3%81%A8%E5%88%86%E9%A1%9E.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -53,8 +53,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "['dog', 'cat']\n",
             "2\n"
@@ -116,8 +116,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "(120, 224, 224, 3)\n",
             "(31, 224, 224, 3)\n",
@@ -196,8 +196,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "# layers =  20\n"
           ]
@@ -232,8 +232,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Model: \"model\"\n",
             "_________________________________________________________________\n",
@@ -303,8 +303,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1/20\n",
             "4/4 [==============================] - 15s 891ms/step - loss: 3.3583 - accuracy: 0.5167\n",
@@ -349,14 +349,14 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<keras.callbacks.History at 0x7f84f17a76a0>"
             ]
           },
+          "execution_count": 38,
           "metadata": {},
-          "execution_count": 38
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -367,16 +367,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "NJmBXsDGgnZt",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "NJmBXsDGgnZt",
         "outputId": "ff49ea72-32da-4a5c-b468-32a1c2cb8841"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "2/2 [==============================] - 3s 2s/step - loss: 0.6935 - accuracy: 0.4516\n"
           ]
@@ -388,59 +388,56 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "J9P0T-rGh72c"
+      },
+      "outputs": [],
       "source": [
         "import pickle\n",
         "pickle.dump(classes, open('classes.sav', 'wb'))\n",
         "model.save('cnn.h5')"
-      ],
-      "metadata": {
-        "id": "J9P0T-rGh72c"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "wrlVgCX6jWmw"
+      },
+      "outputs": [],
       "source": [
         "from keras.models import load_model\n",
         "import pickle\n",
         "import cv2\n",
         "import glob"
-      ],
-      "metadata": {
-        "id": "wrlVgCX6jWmw"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model = load_model('cnn.h5')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "j72Zoki4k-hu"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "model = load_model('cnn.h5')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "classes = pickle.load(open('classes.sav','rb'))"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "HFo64VEelCSv"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "classes = pickle.load(open('classes.sav','rb'))"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "files = glob.glob('sample/*')\n",
-        "print(files)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -448,19 +445,44 @@
         "id": "85QzyN9nQdCM",
         "outputId": "11371e26-1395-4dcd-fc36-bde160f9070a"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "['sample/cat1.jpeg', 'sample/dog1.jpeg']\n"
           ]
         }
+      ],
+      "source": [
+        "files = glob.glob('sample/*')\n",
+        "print(files)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7IAQF7-BVU-q",
+        "outputId": "fe52791a-ce03-4455-c50b-03a10a29d86a"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1/1 [==============================] - 0s 39ms/step\n",
+            "[[0.50180835 0.4981916 ]]\n",
+            "0 dog\n",
+            "1/1 [==============================] - 0s 68ms/step\n",
+            "[[0.50180835 0.4981916 ]]\n",
+            "0 dog\n"
+          ]
+        }
+      ],
       "source": [
         "for file in files:\n",
         "  img = cv2.imread(file)\n",
@@ -472,56 +494,35 @@
         "  print(result)\n",
         "  pred = result.argmax()\n",
         "  print(pred, str(classes[pred]))\n",
-        "  cv2.imwrite('output1/' + str(classes[pred]) + '/' + file, img)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7IAQF7-BVU-q",
-        "outputId": "fe52791a-ce03-4455-c50b-03a10a29d86a"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1/1 [==============================] - 0s 39ms/step\n",
-            "[[0.50180835 0.4981916 ]]\n",
-            "0 dog\n",
-            "1/1 [==============================] - 0s 68ms/step\n",
-            "[[0.50180835 0.4981916 ]]\n",
-            "0 dog\n"
-          ]
-        }
+        "  cv2.imwrite('output1/' + str(classes[pred]) + '/' + file, img)\n",
+        "  "
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "t0UMDfchX3AC"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
-      "provenance": [],
       "authorship_tag": "ABX9TyOUqaKVSDShHbDUSVeSnYAZ",
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
+    "gpuClass": "standard",
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
