Colaboratory を使用して作成しました

--- a/numpyreview.ipynb
+++ b/numpyreview.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMOEc7jNdCbLiUetYI1cDXo",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sherbw28/class_deep/blob/main/numpyreview.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -38,8 +22,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[1. 2. 3. 4. 5.]\n",
             "[1 2 3]\n",
@@ -47,15 +31,15 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([[ 1,  2,  3,  4,  5],\n",
               "       [10, 20, 30, 40, 50]])"
             ]
           },
+          "execution_count": 2,
           "metadata": {},
-          "execution_count": 2
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -81,13 +65,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "a = np.array([1, 2, 3, 4])\n",
-        "a.shape\n",
-        "\n",
-        "b = np.array([[1, 2],[3,4]])\n",
-        "b.shape"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -95,36 +73,29 @@
         "id": "YYEhU1hehSmF",
         "outputId": "3d260611-4cc2-4112-c073-b57be490124d"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(2, 2)"
             ]
           },
+          "execution_count": 3,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "a = np.array([1, 2, 3, 4])\n",
+        "a.shape\n",
+        "\n",
+        "b = np.array([[1, 2],[3,4]])\n",
+        "b.shape"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "x = np.arange(10)\n",
-        "print(x)\n",
-        "\n",
-        "x = np.arange(1, 10).reshape(3,3)\n",
-        "y = np.arange(1, 10).reshape(3,3)\n",
-        "\n",
-        "print(x)\n",
-        "print(y)\n",
-        "\n",
-        "print(x + y)\n",
-        "print(x - y)\n",
-        "print(x * y)"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -132,11 +103,10 @@
         "id": "Iy6rhkythj6t",
         "outputId": "b4b796fd-d1ef-4e81-d73f-d23fd52abebc"
       },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[0 1 2 3 4 5 6 7 8 9]\n",
             "[[1 2 3]\n",
@@ -156,28 +126,25 @@
             " [49 64 81]]\n"
           ]
         }
+      ],
+      "source": [
+        "x = np.arange(10)\n",
+        "print(x)\n",
+        "\n",
+        "x = np.arange(1, 10).reshape(3,3)\n",
+        "y = np.arange(1, 10).reshape(3,3)\n",
+        "\n",
+        "print(x)\n",
+        "print(y)\n",
+        "\n",
+        "print(x + y)\n",
+        "print(x - y)\n",
+        "print(x * y)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "sample_array = np.arange(10)\n",
-        "print(sample_array)\n",
-        "\n",
-        "sample_array2 = sample_array.reshape(2,5)\n",
-        "print(sample_array2)\n",
-        "\n",
-        "sample_array3 = np.array([[1,2,3],[4,5,6]])\n",
-        "sample_array4 = np.array([[7,8,9],[10,11,12]])\n",
-        "\n",
-        "print(np.concatenate([sample_array3,sample_array4],axis=1))\n",
-        "\n",
-        "print(np.hstack((sample_array3,sample_array4)))\n",
-        "\n",
-        "print(np.concatenate([sample_array3,sample_array4],axis=0))\n",
-        "\n",
-        "print(np.vstack((sample_array3,sample_array4)))"
-      ],
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -185,11 +152,10 @@
         "id": "8G3DwM94iEZM",
         "outputId": "5b91793a-c3cd-463a-de15-0ef819fadf31"
       },
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[0 1 2 3 4 5 6 7 8 9]\n",
             "[[0 1 2 3 4]\n",
@@ -208,16 +174,29 @@
             " [10 11 12]]\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "code",
+      ],
       "source": [
         "sample_array = np.arange(10)\n",
         "print(sample_array)\n",
         "\n",
-        "print(sample_array + 5)"
-      ],
+        "sample_array2 = sample_array.reshape(2,5)\n",
+        "print(sample_array2)\n",
+        "\n",
+        "sample_array3 = np.array([[1,2,3],[4,5,6]])\n",
+        "sample_array4 = np.array([[7,8,9],[10,11,12]])\n",
+        "\n",
+        "print(np.concatenate([sample_array3,sample_array4],axis=1))\n",
+        "\n",
+        "print(np.hstack((sample_array3,sample_array4)))\n",
+        "\n",
+        "print(np.concatenate([sample_array3,sample_array4],axis=0))\n",
+        "\n",
+        "print(np.vstack((sample_array3,sample_array4)))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -225,20 +204,46 @@
         "id": "FYimzmlfiK_m",
         "outputId": "e41dfab0-0afb-40e2-a455-3d7a35370772"
       },
-      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[0 1 2 3 4 5 6 7 8 9]\n",
             "[ 5  6  7  8  9 10 11 12 13 14]\n"
           ]
         }
+      ],
+      "source": [
+        "sample_array = np.arange(10)\n",
+        "print(sample_array)\n",
+        "\n",
+        "print(sample_array + 5)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "56eTsiKMiNuw",
+        "outputId": "177f42f4-f34e-4cbc-885b-0c9511cfb3a4"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1 2 3 4 5]\n",
+            "[[1 2]\n",
+            " [3 4]\n",
+            " [5 6]]\n",
+            "2\n"
+          ]
+        }
+      ],
       "source": [
         "n1 = np.array([1,2,3,4,5])\n",
         "print(n1) # [1 2 3 4 5]\n",
@@ -252,31 +257,33 @@
         "print(n2)\n",
         "\n",
         "print(n2.ndim) # 2"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "56eTsiKMiNuw",
-        "outputId": "177f42f4-f34e-4cbc-885b-0c9511cfb3a4"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[1 2 3 4 5]\n",
-            "[[1 2]\n",
-            " [3 4]\n",
-            " [5 6]]\n",
-            "2\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YMDVrlIOi1gK",
+        "outputId": "c0c8d0c8-65df-480e-df48-520a45a1314a"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[-1,  4],\n",
+              "       [ 3,  2],\n",
+              "       [ 2,  5],\n",
+              "       [ 0,  1]])"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "my_li1 = [-1,4]\n",
         "\n",
@@ -291,39 +298,39 @@
         "my_array3 = np.array(my_lists)\n",
         "\n",
         "my_array3"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "YMDVrlIOi1gK",
-        "outputId": "c0c8d0c8-65df-480e-df48-520a45a1314a"
-      },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[-1,  4],\n",
-              "       [ 3,  2],\n",
-              "       [ 2,  5],\n",
-              "       [ 0,  1]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "G6FdmQ9Zi65l"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMOEc7jNdCbLiUetYI1cDXo",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10.2 (v3.10.2:a58ebcc701, Jan 13 2022, 14:50:16) [Clang 13.0.0 (clang-1300.0.29.30)]"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
